[project]
name = "soarm_control"
version = "0.0.1"
description = "tools to control the Standard Open arms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyserial>=3.5",
  "numpy",
  "feetech-servo-sdk",
  "pyzmq>=26",
]
[build-system]
requires = ["setuptools"]
[tool.setuptools]
packages = []

